--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-
 {
   "name": "biztrack-xrp",
   "version": "1.0.0",
   "dependencies": {
     "xrpl": "^3.0.0",
     "axios": "^1.6.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
