--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "pg": "^8.11.0",
     "bcryptjs": "^2.4.3",
     "qrcode": "^1.5.3",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "stripe": "^14.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
