--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "qrcode": "^1.5.3",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "raw-body": "^2.5.2"
   },
   "engines": {
     "node": ">=18.0.0"
