--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+  "functions": {
+    "api/stripe-webhook.js": {
+      "maxDuration": 30
+    }
+  }
 }
