--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "stripe": "^14.0.0",
-    "raw-body": "^2.5.2"
+    "micro": "^10.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
