--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "stripe": "^14.0.0",
     "micro": "^10.0.1",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "otplib": "^12.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
